Added Bottom bar and Fragments

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,14 +4,16 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.rumaan.academapp.ForumFragment">
+        tools:context="com.rumaan.academapp.ProfileFragment">
 
+        <!-- TODO: Update blank fragment layout -->
         <TextView
             android:id="@+id/test_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Forum Fragment"
+            android:text="Profile Fragment here"
             android:textSize="24sp"/>
+
     </FrameLayout>
 </layout>
