--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.rumaan.academapp.LoginActivity">
+    tools:context="com.rumaan.academapp.Activities.LoginActivity">
 
     <EditText
         android:id="@+id/email_edit_text"
@@ -17,8 +17,8 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:hint="Email"
+        android:maxLines="1"
         android:selectAllOnFocus="true"
-        android:singleLine="true"
         app:layout_constraintBottom_toTopOf="@+id/password_edit_text"
         app:layout_constraintHorizontal_bias="0.66"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -32,8 +32,8 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:hint="Password"
+        android:maxLines="1"
         android:selectAllOnFocus="true"
-        android:singleLine="true"
         app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
         app:layout_constraintHorizontal_bias="0.56"
         app:layout_constraintLeft_toLeftOf="parent"
