--- a/app/src/main/res/layout/fragment_forum.xml
+++ b/app/src/main/res/layout/fragment_forum.xml
@@ -4,7 +4,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.rumaan.academapp.ForumFragment">
+        tools:context="com.rumaan.academapp.Fragments.ForumFragment">
 
         <TextView
             android:id="@+id/test_text"
