--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/Asphalt_grey"
-        tools:context="com.rumaan.academapp.ProfileFragment">
+        tools:context="com.rumaan.academapp.Activities.ProfileFragment">
 
         <TextView
             android:id="@+id/textView9"
@@ -83,7 +83,7 @@
         <com.mikhaellopez.circularimageview.CircularImageView
             android:id="@+id/profile_avatar"
             android:layout_width="100dp"
-            android:layout_height="101dp"
+            android:layout_height="100dp"
             android:layout_marginBottom="8dp"
             android:elevation="5dp"
             android:src="@drawable/ic_user"
