--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.rumaan.academapp.Activities.LoginActivity">
+    tools:context="com.rumaan.academapp.activities.LoginActivity">
 
     <EditText
         android:id="@+id/email_edit_text"
