--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/Asphalt_grey"
-        tools:context="com.rumaan.academapp.Activities.ProfileFragment">
+        tools:context="com.rumaan.academapp.activities.ProfileFragment">
 
         <TextView
             android:id="@+id/textView9"
