Modified Profile Fragment

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -34,7 +34,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
-            android:text="Computer Science"
+            android:text="Test Course"
             android:textColor="@color/common_google_signin_btn_text_dark_default"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -51,7 +51,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
-            android:text="Sahyadri College of Engineering and Management"
+            android:text="Test College Name"
             android:textColor="@color/common_google_signin_btn_text_dark_default"
             android:textSize="16sp"
             app:layout_constraintHorizontal_bias="1.0"
@@ -130,7 +130,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
-            android:text="Rumaan Khalander"
+            android:text="Name here"
             android:textColor="@color/common_google_signin_btn_text_dark_default"
             android:textSize="16sp"
             app:layout_constraintLeft_toLeftOf="@+id/guideline"
@@ -161,7 +161,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
-            android:text="rumaankalander@awesome.me"
+            android:text="test@email.com"
             android:textColor="@color/common_google_signin_btn_text_dark_default"
             android:textSize="16sp"
             app:layout_constraintLeft_toLeftOf="@+id/guideline"
