--- a/app/src/main/res/layout/fragment_academics.xml
+++ b/app/src/main/res/layout/fragment_academics.xml
@@ -20,7 +20,7 @@
 
     <TextView
         android:id="@+id/textView2"
-        fontPath="medium.ttf"
+        fontPath="fonts/medium.ttf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="22dp"
@@ -145,7 +145,7 @@
 
     <TextView
         android:id="@+id/textView12"
-        fontPath="medium.ttf"
+        fontPath="fonts/medium.ttf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -163,7 +163,7 @@
 
     <TextView
         android:id="@+id/textView13"
-        fontPath="medium.ttf"
+        fontPath="fonts/medium.ttf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -178,7 +178,7 @@
 
     <TextView
         android:id="@+id/textView14"
-        fontPath="medium.ttf"
+        fontPath="fonts/medium.ttf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
