--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="circulr_meter_medium_text">50sp</dimen>
     <dimen name="circular_meter_medium_header_text">16sp</dimen>
     <dimen name="card_margin">8dp</dimen>
+    <dimen name="edit_text_size">20sp</dimen>
 </resources>
