--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -1,51 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <android.support.v7.widget.Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@drawable/bg_splash_page"
-        android:theme="@style/ToolbarTheme"
-        app:title="College Details" />
+    android:orientation="vertical"
+    tools:ignore="MissingPrefix">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="@dimen/card_margin"
+        android:layout_height="0dp"
+        android:layout_weight="2"
         app:cardBackgroundColor="@android:color/background_light"
         app:cardCornerRadius="2dp"
+        app:cardMaxElevation="4dp">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal"
+            android:elevation="1dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/bg_grey" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal"
+            android:scaleType="centerCrop"
+            android:src="@drawable/college_reading" />
+
+        <TextView
+            android:id="@+id/textView4"
+            fontPath="fonts/medium.ttf"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:elevation="2dp"
+            android:text="College Details"
+            android:textColor="@android:color/background_light"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+
+        <TextView
+            android:id="@+id/college_details_description_Text"
+            fontPath="fonts/regular.ttf"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|bottom"
+            android:layout_marginBottom="20dp"
+            android:elevation="2dp"
+            android:text="@string/provide_us_your_college_details"
+            android:textAlignment="center"
+            android:textColor="@android:color/background_light"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="8dp"
+        android:layout_weight="5"
+        app:cardBackgroundColor="@android:color/background_light"
+        app:cardCornerRadius="2dp"
+        app:cardElevation="4dp"
         app:cardMaxElevation="4dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="8dp">
 
-            <Spinner
-                android:id="@+id/college_selector"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/college_name"
                 android:layout_width="match_parent"
-                android:layout_height="40dp" />
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:padding="2dp"
+                app:hintEnabled="true">
+
+                <EditText
+                    fontPath="fonts/regular.ttf"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="College Name"
+                    android:maxLines="4"
+                    android:textColor="@color/Asphalt_grey"
+                    android:textSize="@dimen/edit_text_size" />
+            </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/usn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:padding="8dp">
+                android:layout_margin="4dp"
+                android:padding="2dp"
+                app:counterEnabled="true"
+                app:counterMaxLength="10"
+                app:hintEnabled="true">
 
                 <EditText
+                    fontPath="fonts/regular.ttf"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/usn"
-                    android:inputType="text" />
+                    android:layout_height="match_parent"
+                    android:hint="USN"
+                    android:inputType="textCapCharacters"
+                    android:maxLength="10"
+                    android:maxLines="1"
+                    android:textColor="@color/Asphalt_grey"
+                    android:textSize="@dimen/edit_text_size" />
             </android.support.design.widget.TextInputLayout>
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
+    <Button
+        android:id="@+id/btn_next"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:text="Next"
+        android:textAlignment="center"
+        android:paddingEnd="8dp"
+        android:layout_weight="0.8"
+        android:theme="@style/ButtonStyle" />
 </LinearLayout>
