--- a/app/src/main/res/drawable/circular_meter_danger.xml
+++ b/app/src/main/res/drawable/circular_meter_danger.xml
@@ -3,6 +3,6 @@
        android:shape="oval">
     <stroke
         android:width="2dp"
-        android:color="@color/danger"/>
+        android:color="@color/red_danger" />
     <!-- Set the width and height same, so as to get the circle -->
 </shape>
