--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -5,6 +5,7 @@
     android:id="@+id/root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
     android:orientation="vertical"
     tools:ignore="MissingPrefix">
 
@@ -84,8 +85,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="4dp"
-                android:padding="2dp"
-                app:hintEnabled="true">
+                android:padding="4dp"
+                android:theme="@style/TextInputLayoutTheme"
+                app:errorTextAppearance="@style/TextInputLayoutTheme.ErrorAppearance"
+                app:hintEnabled="true"
+                app:hintTextAppearance="@style/TextInputLayoutTheme.HintAppearance">
 
                 <EditText
                     fontPath="fonts/regular.ttf"
@@ -101,11 +105,14 @@
                 android:id="@+id/usn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="4dp"
-                android:padding="2dp"
+                android:layout_margin="@dimen/card_view_content_margin"
+                android:padding="@dimen/card_view_content_padding"
+                android:theme="@style/TextInputLayoutTheme"
                 app:counterEnabled="true"
                 app:counterMaxLength="10"
-                app:hintEnabled="true">
+                app:errorTextAppearance="@style/TextInputLayoutTheme.ErrorAppearance"
+                app:hintEnabled="true"
+                app:hintTextAppearance="@style/TextInputLayoutTheme.HintAppearance">
 
                 <EditText
                     fontPath="fonts/regular.ttf"
@@ -118,6 +125,27 @@
                     android:textColor="@color/Asphalt_grey"
                     android:textSize="@dimen/edit_text_size" />
             </android.support.design.widget.TextInputLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/card_view_content_margin"
+                android:orientation="horizontal"
+                android:padding="@dimen/card_view_content_padding">
+
+                <Spinner
+                    android:id="@+id/year_spinner"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1" />
+
+                <Spinner
+                    android:id="@+id/course_spinner"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2" />
+
+            </LinearLayout>
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
@@ -126,9 +154,10 @@
         android:id="@+id/btn_next"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_weight="0.8"
+        android:paddingEnd="8dp"
+        android:paddingStart="8dp"
         android:text="Next"
         android:textAlignment="center"
-        android:paddingEnd="8dp"
-        android:layout_weight="0.8"
         android:theme="@style/ButtonStyle" />
 </LinearLayout>
