--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,6 @@
     <dimen name="circular_meter_medium_header_text">16sp</dimen>
     <dimen name="card_margin">8dp</dimen>
     <dimen name="edit_text_size">20sp</dimen>
+    <dimen name="card_view_content_padding">4dp</dimen>
+    <dimen name="card_view_content_margin">4dp</dimen>
 </resources>
