--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -187,17 +187,48 @@
 
     </android.support.v7.widget.CardView>
 
-    <Button
+    <FrameLayout
         android:id="@+id/btn_next"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginBottom="4dp"
         android:layout_marginEnd="4dp"
         android:layout_marginStart="4dp"
         android:layout_weight="0.8"
-        android:elevation="4dp"
-        android:paddingEnd="8dp"
-        android:paddingStart="8dp"
-        android:text="Next"
-        android:textAlignment="center"
-        android:theme="@style/ButtonStyle" />
+        android:background="@color/Asphalt_grey"
+        android:clickable="true"
+        android:elevation="4dp">
+
+        <TextView
+            android:id="@+id/btn_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:elevation="6dp"
+            android:text="Next"
+            android:textAllCaps="true"
+            android:textAppearance="@style/TextAppearance.FontPath.Medium"
+            android:textColor="@android:color/white" />
+
+        <View
+            android:id="@+id/mask_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:background="@color/Emerald_flat"
+            android:elevation="5dp"
+            android:visibility="invisible" />
+
+        <ImageView
+            android:id="@+id/img_check"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical|end"
+            android:layout_marginEnd="16dp"
+            android:elevation="5dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_check"
+            android:tint="@android:color/white" />
+
+    </FrameLayout>
 </LinearLayout>
