--- a/app/src/main/res/layout/activity_choose_type.xml
+++ b/app/src/main/res/layout/activity_choose_type.xml
@@ -2,12 +2,14 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/Emerald_flat"
     tools:context="com.rumaan.academapp.activities.ChooseTypeActivity">
 
     <TextView
+        android:id="@+id/header_text_who"
         fontPath="fonts/medium.ttf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -21,6 +23,7 @@
         tools:ignore="MissingPrefix"/>
 
     <TextView
+        android:id="@+id/desc_choose_type"
         fontPath="fonts/regular.ttf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -58,6 +61,7 @@
             android:clickable="true"
             android:padding="24dp"
             android:src="@drawable/ic_student"
+            android:transitionName="@string/shared_transition_img"
             />
 
         <View
@@ -78,8 +82,8 @@
             android:clickable="true"
             android:padding="24dp"
             android:src="@drawable/ic_classroom"
+            android:transitionName="@string/shared_transition_img"
             />
     </LinearLayout>
-
 
 </RelativeLayout>
